# homm3-wallpaper

./: CMakeLists.txt  LICENSE.txt  README  data_maps.cpp  data_maps.h  def_file.cpp  def_file.h  globals.h  homm3_image_provider.cpp  homm3_image_provider.h  homm3map-viewer.desktop  homm3map.cpp  homm3map.h  homm3singleton.cpp  homm3singleton.h  lod_archive.cpp  lod_archive.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  map_object.cpp  map_object.h  plugin.cpp  plugin.h  qml.qrc  qmldir  random.cpp  random.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  texture_atlas.cpp  texture_atlas.h
vcmi/: AUTHORS  CBinaryReader.cpp  CBinaryReader.h  CCompressedStream.cpp  CCompressedStream.h  CFileInputStream.cpp  CFileInputStream.h  CGTownInstance.h  CInputStream.h  CMap.cpp  CMap.h  CMapDefines.h  CObjectHandler.h  CQuest.h  CStream.h  GameConstants.h  MapFormatH3M.cpp  MapFormatH3M.h  ObjectTemplate.cpp  ObjectTemplate.h  int3.h
wallpaper/: metadata.desktop  metadata.json
wallpaper/contents/config/: main.xml
wallpaper/contents/ui/: config.qml  main.qml
